update to issue with image on mobile

--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ body {
         animation: bobbing 1s ease-in-out infinite; /* Faster animation on mobile */
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Smaller text shadow on mobile */
     }
+
+    .index-me {
+        border-radius: 50%;
+        width: 150px;
+        height: 188px;
+        margin-top: -320px;
+    }
 }
 
 @media screen and (max-width: 431px) {
@@ -47,6 +54,13 @@ body {
         font-size: 12vw; /* Smaller font size on mobile */
         animation: bobbing 1s ease-in-out infinite; /* Faster animation on mobile */
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Smaller text shadow on mobile */
+    }
+
+    .index-me {
+        border-radius: 50%;
+        width: 150px;
+        height: 188px;
+        margin-top: -320px;
     }
 }
 
